--- a/layer.yaml
+++ b/layer.yaml
@@ -1,3 +1,4 @@
+repo: git@github.com:AdamIsrael/layer-netutils.git
 includes: ['layer:basic']  # if you use any interfaces, add them here
 options:
   basic:
