Add support for nmap action Set default workload status

--- a/actions.yaml
+++ b/actions.yaml
@@ -1,3 +1,11 @@
+nmap:
+  description: "nmap a thing!"
+  params:
+    destination:
+      description: "destination to scan"
+      type: string
+  required:
+    - destination
 ping:
   description: 'ping a thing!'
   params:
